@@ -1,5 +1,6 @@
 package com.github.ykiselev;
 
+import org.apache.commons.io.IOUtils;
 import org.apache.curator.framework.CuratorFramework;
 import org.apache.zookeeper.CreateMode;
 
@@ -23,7 +24,7 @@ public final class Props {
 
     public void loadFrom(URL res) {
         try (InputStream is = res.openStream()) {
-            set(res.getFile(), is.readAllBytes());
+            set(res.getFile(), IOUtils.toByteArray(is));
         } catch (IOException e) {
             throw new UncheckedIOException(e);
         }
